# Serechops-Stash

./: .gitignore  README.md  _config.yml  build_site.sh  index.yml
.github/: FUNDING.yml
.github/workflows/: deploy.yml  manual_build_index.yml
Jizzarr Flask/: app.py  comparison.py  config.py  models.py  requirements.txt  utils.py
Jizzarr Flask/static/: Thumbs.db  collection.css  config.css  index.css  logs.css  script.js  search_stash.py  styles.css
Jizzarr Flask/templates/: collection.html  config.html  index.html  logs.html
Stash Discourse Userscripts/: README.md  expandPostsIframe.user.js
Stash Userscripts/: README.md  stashRightClick for Galleries-1.1.user.js  stashRightClick for Galleries.user.js  stashRightClick for Images-1.0.user.js  stashRightClick for Images.user.js  stashRightClick for Scenes-2.11.user.js  stashRightClick for Scenes.user.js
StashDB Userscript/: Studio Image Blur for StashDB-0.1.user.js
Stash_Userscripts/: performerImageCarousel.user.js  stashCreateAll.user.js
Stash_Userscripts/stashRightClick/: README.md  stashRightClickGalleries.user.js  stashRightClickGuessingGame.js  stashRightClickImages.user.js  stashRightClickPerformerMerge.user.js  stashRightClickPerformers.user.js  stashRightClickScenes.user.js  stashRightClickSettings.user.js  stashRightClickSlotMaScene.user.js  stashRightClickTags.user.js
_site/: index.yml
archive/Renamer-Dev/: renamer_settings.py  requirements.txt  rollback.py
archive/performerGalleryScraper/: gallery_scraper.js  package.json
archive/stashRightClick_Archive/: stashRightClickGalleries.user.js  stashRightClickGuessingGame.js  stashRightClickImages.user.js  stashRightClickPerformerMerge.user.js  stashRightClickPerformers.user.js  stashRightClickScenes.user.js  stashRightClickSettings.user.js
performerGalleryScraper/: performer_gallery_scraper.yml
plugins/Movie-Fy/: Movie-Fy Bulk Movie URL Scrape.yml  Movie-Fy Check and Update Scene Titles.py  Movie-Fy Check and Update Scene Titles.yml  Movie-Fy Create Movie Studio.py  Movie-Fy Scene Studio Bulk Update.py  Movie-Fy Update Movie Scene Covers.yml  Movie-Fy.py  Movie-Fy.yml  README.md
plugins/PerformerImageExport/: performer_image_export.yml  stash_performer_image_export.py
plugins/Renamer-Dev/: README.md  renamer-dev.py  renamer-dev.yml  renamer.yml  renamer_settings.py
stash-connection-lib/: .gitignore  Makefile  README.md  deploy.py  pyproject.toml  setup_pypi.py
stash-connection-lib/stash_connection_lib/: __init__.py  core.py
stash-connection-lib/tests/: test_core.py
stashAid/: README.md  requirements.txt  start_app.py  stashAid.py
themes/ONYX/: ONYX.css  (+3 more)
(+234 files in other folders)
