[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "stash-connection-lib"
version = "0.1.1"
description = "Beginner-friendly Stash GraphQL connection helpers for plugin developers"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [{name="Serechops", email="serechops@github.com"}]
keywords = ["stash", "graphql", "plugin", "helper", "connection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
]
dependencies = [
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.950",
]

[project.urls]
"Homepage" = "https://github.com/Serechops/Serechops-Stash"
"Repository" = "https://github.com/Serechops/Serechops-Stash/tree/main/stash-connection-lib"
"Bug Tracker" = "https://github.com/Serechops/Serechops-Stash/issues"
"Documentation" = "https://github.com/Serechops/Serechops-Stash/tree/main/stash-connection-lib#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["stash_connection_lib*"]

[tool.setuptools.package-data]
stash_connection_lib = ["py.typed"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.mypy]
python_version = "0.1.1"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
